Shader editor, preliminary work

--- a/index.html
+++ b/index.html
@@ -44,10 +44,14 @@
     <script type="text/javascript" src="lib/js/ui-bootstrap-tpls.min.js"></script>
 
     <script type="text/javascript" src="lib/js/renderjs-0.1.js"></script>
+    <script type="text/javascript" src="lib/js/ace.js"></script>
 
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/mommy.js"></script>
     <script type="text/javascript" src="js/daddy.js"></script>
     <script type="text/javascript" src="js/canvas.js"></script>
     <script type="text/javascript" src="js/dock.js"></script>
+    <script type="text/javascript" src="js/contextmenu.js"></script>
+    <script type="text/javascript" src="js/glsl-editor.js"></script>
 </body>
 </html>
